<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.HomeFragment">

    <ProgressBar
        android:id="@+id/progressBarHome"
        android:layout_width="166dp"
        android:layout_height="167dp"
        android:elevation="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bttnObra"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:enabled="false"
                android:text="@string/obra" />

            <Button
                android:id="@+id/bttnUsuario"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/usuario" />

            <Button
                android:id="@+id/bttnEtiqueta"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/etiquetas" />

        </LinearLayout>

        <SearchView
            android:id="@+id/seObra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="visible">

        </SearchView>

        <SearchView
            android:id="@+id/seUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="gone" />

        <SearchView
            android:id="@+id/seEtiqueta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:visibility="gone">

        </SearchView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvObra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>